--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <body>
       <h1>This is a Header</h1>
-      <p>This is a paragraph 1.</p>
-      <p>This is another paragraph.</p>
+      <p>This is the first paragraph.</p>
+      <p>This is the second paragraph.</p>
    </body>
 </html>
